<resources>
  <string name="app_name">Sketchaholic</string>
  <string name="sketchaholic">sketchaholic</string>
  <string name="choose_a_username">choose a username</string>
  <string name="username">username</string>
  <string name="next">next</string>
  <string name="search_for_rooms">search for rooms</string>
  <string name="no_rooms_found">no rooms found</string>
  <string name="or">or</string>
  <string name="create_room">create room</string>
  <string name="create_a_new_room">create a new room</string>
  <string name="room_name">room name</string>
  <string name="room_size">room size</string>
  <string name="error_internet_not_connected">Internet not connected</string>
  <string name="error_http_exception">Something went wrong!</string>
  <string name="error_network_error">Network error</string>
  <string name="error_unknown">Unknown error occurred</string>
  <string name="error_username_empty">Username can\'t be empty</string>
  <string name="error_username_too_short">Username too short, minimum length is %d</string>
  <string name="error_username_too_long">Username too long, maximum length is %d</string>
  <string name="error_room_name_empty">Room name can\'t be empty</string>
  <string name="error_room_name_too_short">Room name too short, minimum length is %d</string>
  <string name="error_room_name_too_long">Room name too long, maximum length is %d</string>
  <string name="error_room_size_empty">Room size can\'t be empty</string>
  <string name="choose_your_word">choose your word</string>
  <string name="open">Player list drawer opened</string>
  <string name="close">Player list drawer closed</string>
  <string name="error_connection_failed">The connection failed</string>
  <string name="error_room_not_found">Room not found</string>
  <string name="waiting_for_players">Waiting for players to join</string>
  <string name="waiting_for_start">Waiting for game to start</string>
  <string name="player_chosing_word">%s is chosing a word</string>
</resources>