<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_choose_a_username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/jungle_kid"
    android:layout_marginBottom="8dp"
    android:text="@string/choose_a_username"
    android:textSize="24sp"
    app:layout_constraintBottom_toTopOf="@+id/til_username"
    app:layout_constraintStart_toStartOf="@+id/til_username" />

  <ImageView
    android:id="@+id/iv_sketchaholic"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@+id/tv_choose_a_username"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_welcome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sketchaholic"
    android:textStyle="bold"
    android:fontFamily="@font/jungle_kid"
    android:textSize="56sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/iv_sketchaholic" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_username"
    style="@style/TextInputLayoutStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="50dp"
    android:layout_marginTop="148dp"
    android:hint="@string/username"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/et_username"
      style="@style/TextInputStyle"
      android:maxLength="12"
      android:fontFamily="@font/jungle_kid"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:inputType="text" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_next"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:textColor="@color/black"
    style="@style/Widget.MaterialComponents.Button.TextButton"
    android:fontFamily="@font/jungle_kid"
    android:text="@string/next"
    app:strokeWidth="2dp"
    app:layout_constraintEnd_toEndOf="@+id/til_username"
    app:layout_constraintTop_toBottomOf="@+id/til_username" />


</androidx.constraintlayout.widget.ConstraintLayout>