<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/iv_sketchaholic_create"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@+id/til_room_name_create_room"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/tv_create_room"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/jungle_kid"
    android:text="@string/create_a_new_room"
    android:textSize="48sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/iv_sketchaholic_create" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_room_name_create_room"
    style="@style/TextInputLayoutStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="50dp"
    android:hint="@string/room_name"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/et_room_name_create_room"
      style="@style/TextInputStyle"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:inputType="text"
      android:maxLength="16" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_room_size"
    style="@style/DropDownStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/room_size"
    android:padding="2dp"
    app:layout_constraintEnd_toStartOf="@+id/btn_create_room_create_room"
    app:layout_constraintStart_toStartOf="@+id/til_room_name_create_room"
    app:layout_constraintTop_toBottomOf="@+id/til_room_name_create_room">

    <AutoCompleteTextView
      android:id="@+id/tv_max_persons"
      style="@style/TextInputStyle"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fontFamily="@font/jungle_kid"
      android:inputType="none"
      android:labelFor="@id/tv_max_persons"
      android:padding="4dp" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_create_room_create_room"
    style="@style/Widget.MaterialComponents.Button.TextButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/jungle_kid"
    android:text="@string/create_room"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="@+id/til_room_size"
    app:layout_constraintEnd_toEndOf="@+id/til_room_name_create_room"
    app:layout_constraintTop_toTopOf="@+id/til_room_size"
    app:strokeWidth="2dp" />

  <com.airbnb.lottie.LottieAnimationView
    android:id="@+id/create_room_progress_bar"
    android:layout_width="148dp"
    android:layout_height="148dp"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/til_room_size"
    app:lottie_autoPlay="true"
    app:lottie_loop="true"
    app:lottie_rawRes="@raw/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>