<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_room_name"
    style="@style/TextInputLayoutStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:hint="@string/search_for_rooms"
    app:layout_constraintEnd_toStartOf="@+id/ib_reload"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/et_room_name"
      style="@style/TextInputStyle"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:inputType="text" />

  </com.google.android.material.textfield.TextInputLayout>

  <ImageButton
    android:id="@+id/ib_reload"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:background="@android:color/transparent"
    app:layout_constraintBottom_toTopOf="@+id/rv_rooms"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_refresh" />

  <ImageView
    android:id="@+id/iv_no_rooms_found"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintBottom_toTopOf="@+id/tv_no_rooms_found"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:srcCompat="@drawable/ic_error" />

  <TextView
    android:id="@+id/tv_no_rooms_found"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/no_rooms_found"
    android:layout_marginTop="48dp"
    android:textSize="43sp"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="@+id/rv_rooms"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/rv_rooms" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_rooms"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@+id/or_text_view"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/til_room_name" />

  <com.airbnb.lottie.LottieAnimationView
    android:id="@+id/rooms_progress_bar"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="@+id/rv_rooms"
    app:layout_constraintEnd_toEndOf="@+id/rv_rooms"
    app:layout_constraintStart_toStartOf="@+id/rv_rooms"
    app:layout_constraintTop_toTopOf="@+id/rv_rooms"
    app:lottie_autoPlay="true"
    app:lottie_loop="true"
    app:lottie_rawRes="@raw/loading" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/or_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/or"
    app:layout_constraintBottom_toTopOf="@+id/btn_create_room"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_create_room"
    style="@style/Widget.MaterialComponents.Button.TextButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/create_room"
    android:fontFamily="@font/jungle_kid"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:strokeWidth="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>